# cpp_project_template_with_library

./: CMakeLists.txt  License.txt  MultiCPackConfig.cmake  compiler_flags.cmake  configure_template.h  main.cpp
include/: configure_template.h
src/: main.cpp
test/: CMakeLists.txt  test.cpp
